# nanaro

./: .gitignore  CMakeLists.txt  LICENSE  Roadmap.org
include/: CMakeLists.txt  Player.hpp
include/Block/: BlockColour.hpp  Colour.hpp  Image.hpp  Numeric.hpp  PixCol.hpp  ToBlock.hpp  Type.hpp
include/Grid/: Generate.hpp  Get.hpp  Layout.hpp  Opening.hpp  Properties.hpp  Selection.hpp  Type.hpp  Wall.hpp  WallLayout.hpp
include/Player/: Properties.hpp
include/Sprite/: Draw.hpp  Init.hpp  Invalid.hpp  Properties.hpp  Sprite.hpp  UnitInit.hpp
include/System/: Direction.hpp  Pair.hpp  Random.hpp
include/Ui/: Compose.hpp
src/: CMakeLists.txt  main.cpp  player.cpp  sprite.cpp
src/block/: colour.cpp  image.cpp  numeric.cpp  toblock.cpp
src/grid/: generate.cpp  get.cpp  grid.cpp  layout.cpp  selection.cpp  type.cpp  wall.cpp  wallLayout.cpp
src/sprite/: draw.cpp  invalid.cpp
src/sprite/init/: basic.cpp  moveable.cpp  numeric.cpp
src/sys/: random.cpp
src/ui/: compose.cpp
